--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "unisharp/laravel-filemanager",
+  "name": "dkvhin/laravel-filemanager",
   "description": "A file upload/editor intended for use with Laravel 5 and CKEditor / TinyMCE",
   "license": "MIT",
   "keywords": [
@@ -31,7 +31,8 @@
     "illuminate/filesystem": "5.4.* || 5.5.* || 5.6.* || 5.7.*",
     "illuminate/support": "5.4.* || 5.5.* || 5.6.* || 5.7.*",
     "illuminate/http": "5.4.* || 5.5.* || 5.6.* || 5.7.*",
-    "illuminate/container": "5.4.* || 5.5.* || 5.6.* || 5.7.*"
+    "illuminate/container": "5.4.* || 5.5.* || 5.6.* || 5.7.*",
+    "spatie/laravel-image-optimizer": "^1.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2",
@@ -44,7 +45,7 @@
   },
   "autoload": {
     "psr-4": {
-      "UniSharp\\LaravelFilemanager\\": "src/"
+      "Dkvhin\\LaravelFilemanager\\": "src/"
     }
   },
   "autoload-dev": {
@@ -55,7 +56,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "UniSharp\\LaravelFilemanager\\LaravelFilemanagerServiceProvider"
+        "Dkvhin\\LaravelFilemanager\\LaravelFilemanagerServiceProvider"
       ],
       "aliases": {
       }
