--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     {
       "name": "UniSharp Ltd.",
-      "email": "opensource@unisharp.com"
+      "email": "opensource@dkvhin.com"
     }
   ],
   "require": {
