--- a/composer.json
+++ b/composer.json
@@ -40,14 +40,14 @@
   },
   "autoload": {
     "psr-4": {
-      "UniSharp\\LaravelFilemanager\\": "src/"
+      "Dkvhin\\LaravelFilemanager\\": "src/"
     }
   },
   "bin": ["bin/debug"],
   "extra": {
     "laravel": {
       "providers": [
-        "UniSharp\\LaravelFilemanager\\LaravelFilemanagerServiceProvider"
+        "Dkvhin\\LaravelFilemanager\\LaravelFilemanagerServiceProvider"
       ],
       "aliases": {
       }
